# django-image-share

./: .gitignore  README.md  pyproject.toml
imageShare/imageShare/: settings.py  urls.py
imageShare/imagesApp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
imageShare/imagesApp/migrations/: 0001_initial.py
imageShare/imagesApp/templates/imagesApp/: addImage.html  homePage.html  imageDelete.html  imageDetail.html  imageUpdate.html  login.html  register.html  userAccount.html
imageShare/imagesApp/templates/inc/: _userStatistic.html
imageShare/imagesApp/templatetags/: statisticData.py
imageShare/static/myCSS/: myCSS.css
imageShare/templates/: base.html
imageShare/templates/inc/: _navigate.html
