[tool.poetry]
name = "django_imageshare"
version = "0.1.0"
description = ""
authors = ["ALittleMoron <dima.lunev14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
django-debug-toolbar = "^3.2.1"
psycopg2-binary = "^2.9.1"
Pillow = "^8.3.1"
django-taggit = "^1.5.1"
django-admin-interface = "^0.16.3"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.6b0"
ipython = "^7.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
